# token-manager

./: .eslintrc.js  .gitignore  .mocharc.js  Anchor.toml  Captain.toml  Cargo.toml  DIAGRAM.txt  Makefile  README.md  flake.nix  generate-idls.sh  index.html  jest.config.js  modules.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.husky/: pre-commit
api/: .gitignore  README.md  test.ts  (+7 more)
programs/cardinal-paid-claim-approver/: Cargo.toml  README.md
programs/cardinal-paid-claim-approver/src/: errors.rs  lib.rs  state.rs
programs/cardinal-paid-claim-approver/src/instructions/: close.rs  init.rs  mod.rs  pay.rs
programs/cardinal-payment-manager/: Cargo.toml  README.md
programs/cardinal-payment-manager/src/: errors.rs  lib.rs  state.rs
programs/cardinal-payment-manager/src/instructions/: close.rs  handle_payment.rs  handle_payment_with_royalties.rs  init.rs  manage_payment.rs  mod.rs  settle.rs  update.rs
programs/cardinal-receipt-index/: Cargo.toml  README.md
programs/cardinal-receipt-index/src/: errors.rs  lib.rs  state.rs
programs/cardinal-receipt-index/src/instructions/: add.rs  claim.rs  init.rs  invalidate.rs  mod.rs  remove.rs
programs/cardinal-rent-receipt/: Cargo.toml
programs/cardinal-rent-receipt/src/: errors.rs  lib.rs  state.rs
programs/cardinal-rent-receipt/src/instructions/: claim.rs  invalidate.rs  mod.rs
programs/cardinal-stake-pool/: Cargo.toml
programs/cardinal-stake-pool/src/: errors.rs  lib.rs  state.rs
programs/cardinal-stake-pool/src/instructions/: init_entry.rs  init_pool.rs  mod.rs  stake.rs  unstake.rs
programs/cardinal-time-invalidator/: Cargo.toml  README.md
programs/cardinal-time-invalidator/src/: errors.rs  lib.rs  state.rs
programs/cardinal-time-invalidator/src/instructions/: close.rs  extend_expiration.rs  init.rs  invalidate.rs  mod.rs  reset_expiration.rs  set_expiration.rs  update_max_expiration.rs
programs/cardinal-token-manager/: Cargo.toml  README.md
programs/cardinal-token-manager/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/cardinal-token-manager/src/instructions/: add_invalidator.rs  claim.rs  claim_receipt_mint.rs  close_mint_manager.rs  create_claim_receipt.rs  create_mint_manager.rs  create_transfer_receipt.rs  disable_reissue.rs  init.rs  init_mint_counter.rs  init_receipt_mint_manager.rs  invalidate.rs  issue.rs  mod.rs  set_claim_approver.rs  set_claim_authority.rs  set_payment_manager.rs  set_payment_mint.rs  set_transfer_authority.rs  transfer.rs  uninit.rs  unissue.rs  update_invalidation_type.rs  update_invalidators.rs
programs/cardinal-token-manager/src/instructions/owned/: delegate.rs  mod.rs  send.rs  undelegate.rs
programs/cardinal-token-manager/src/instructions/permissioned/: delegate.rs  migrate.rs  mod.rs  send.rs  undelegate.rs  unwrap.rs
programs/cardinal-token-manager/src/instructions/transfer/: create_transfer_receipt.rs  mod.rs  update_transfer_receipt.rs
programs/cardinal-token-manager/src/instructions/transfers/: close_transfer_receipt.rs  mod.rs  transfer.rs
programs/cardinal-transfer-authority/: Cargo.toml  clippy.toml
programs/cardinal-transfer-authority/src/: errors.rs  lib.rs  state.rs
programs/cardinal-transfer-authority/src/instructions/: accept_listing.rs  accept_offer.rs  close.rs  create_listing.rs  init.rs  init_marketplace.rs  init_transfer_authority.rs  make_bid.rs  mod.rs  pay.rs  place_offer.rs  remove_listing.rs  update_listing.rs  update_transfer_authority.rs
programs/cardinal-transfer-authority/src/instructions/listing/: accept_listing.rs  create_listing.rs  mod.rs  remove_listing.rs  update_listing.rs
programs/cardinal-transfer-authority/src/instructions/marketplace/: init_marketplace.rs  mod.rs  update_marketplace.rs
programs/cardinal-transfer-authority/src/instructions/transfer/: accept_transfer.rs  cancel_transfer.rs  init_transfer.rs
programs/cardinal-transfer-authority/src/instructions/transfer_authority/: init_transfer_authority.rs  release.rs  update_transfer_authority.rs
programs/cardinal-use-invalidator/: Cargo.toml  README.md
programs/cardinal-use-invalidator/src/: errors.rs  lib.rs  state.rs
programs/cardinal-use-invalidator/src/instructions/: close.rs  extend_usages.rs  increment_usages.rs  init.rs  invalidate.rs  mod.rs
programs/idenetity-gateway-verifier/: Cargo.toml
programs/idenetity-gateway-verifier/src/: lib.rs  state.rs
programs/idenetity-gateway-verifier/src/instructions/: close.rs  init.rs  invalidate.rs
programs/solana-nft-programs-paid-claim-approver/: Cargo.toml
programs/solana-nft-programs-paid-claim-approver/src/: lib.rs  state.rs
programs/solana-nft-programs-paid-claim-approver/src/instructions/: close.rs  init.rs  pay.rs
programs/solana-nft-programs-time-invalidator/: Cargo.toml
programs/solana-nft-programs-time-invalidator/src/: lib.rs
programs/solana-nft-programs-time-invalidator/src/instructions/: close.rs  extend_expiration.rs  init.rs  invalidate.rs  reset_expiration.rs  update_max_expiration.rs
programs/solana-nft-programs-token-manager/: Cargo.toml  README.md
programs/solana-nft-programs-token-manager/src/: lib.rs
programs/solana-nft-programs-token-manager/src/instructions/: claim.rs  claim_receipt_mint.rs  close_mint_manager.rs  create_mint_manager.rs  invalidate.rs  issue.rs  mod.rs  replace_invalidator.rs  unissue.rs
programs/solana-nft-programs-token-manager/src/instructions/permissioned/: delegate.rs  migrate.rs  send.rs  undelegate.rs
programs/solana-nft-programs-token-manager/src/instructions/transfers/: create_transfer_receipt.rs  transfer.rs  update_transfer_receipt.rs
programs/solana-nft-programs-transfer-authority/: Cargo.toml
programs/solana-nft-programs-transfer-authority/src/: lib.rs
programs/solana-nft-programs-transfer-authority/src/instructions/: mod.rs
programs/solana-nft-programs-use-invalidator/: Cargo.toml
programs/solana-nft-programs-use-invalidator/src/: errors.rs  lib.rs
programs/solana-nft-programs-use-invalidator/src/instructions/: close.rs  extend_usages.rs  increment_usages.rs  init.rs  invalidate.rs  mod.rs
(+441 files in other folders)
