[package]
name = "cardinal-paid-claim-approver"
version = "1.1.0"
description = "Cardinal paid claim approver"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-paid-claim-approver"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_paid_claim_approver"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-associated-token-account = "1.0.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.8.1"
cardinal-token-manager = { version = "^1.1.0", path = "../cardinal-token-manager", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }