[package]
name = "cardinal-payment-manager"
version = "1.5.21"
description = "Cardinal payment manager"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-payment-manager"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_payment_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-associated-token-account = "1.0.3"
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
solana-program = "1.9.28"

[dev-dependencies]
proptest = { version = "1.0" }