[package]
name = "cardinal-receipt-index"
version = "0.2.6"
description = "Cardinal receipt index"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-receipt-index"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_receipt_index"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"
spl-associated-token-account = "1.0.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.8.1"
cardinal-token-manager = { version = "^0.2.6", path = "../cardinal-token-manager", features = ["cpi"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = { version = "1.0" }