[package]
name = "cardinal-time-invalidator"
version = "1.5.18"
description = "Program for a invalidating token managers based on time"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-time-invalidator"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_time_invalidator"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-associated-token-account = "1.0.3"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
solana-program = "1.9.28"
cardinal-token-manager = { version = "^1.5.18", path = "../cardinal-token-manager", features = ["cpi"] }
cardinal-payment-manager = { version = "^1.5.18", path = "../cardinal-payment-manager", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }