[package]
name = "cardinal-time-invalidator"
version = "4.3.2"
description = "Program for a invalidating token managers based on time"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-time-invalidator"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_time_invalidator"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
spl-associated-token-account = "1.1.2"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
solana-program = "1.10.29"
cardinal-token-manager = { version = "^4.3.2", path = "../cardinal-token-manager", features = ["cpi"] }
cardinal-payment-manager = { version = "^3.0.0", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }