[package]
name = "cardinal-token-manager"
version = "0.2.17"
description = "Cardinal token manager"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-token-manager"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_token_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.0", features = ["init-if-needed"] }
anchor-spl = "0.22.0"
solana-program = "^1.8"
spl-associated-token-account = "1.0.2"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = { version = "1.0" }