[package]
name = "cardinal-token-manager"
version = "4.0.0"
description = "Cardinal token manager"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-token-manager"
authors = ["Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_token_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "1.10.29"
spl-associated-token-account = "1.1.2"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.8.0", features = ["no-entrypoint"] }
cardinal-creator-standard = { version = "^2.2.0", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }