[package]
name = "cardinal-transfer-authority"
version = "1.7.1"
description = "Cardinal transfer authority"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-transfer-authority"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>", "Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_transfer_authority"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
spl-associated-token-account = "1.0.3"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.3.3", features = ["no-entrypoint"] }
solana-program = "1.9.28"
cardinal-token-manager = { version = "^1.7.1", path = "../cardinal-token-manager", features = ["cpi"] }
cardinal-payment-manager = { version = "^1.7.1", path = "../cardinal-payment-manager", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }