[package]
name = "cardinal-transfer-authority"
version = "4.0.2"
description = "Cardinal transfer authority"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/cardinal-transfer-authority"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>", "Jeremy Bogle <jeremy@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_transfer_authority"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
spl-associated-token-account = "1.1.2"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.7.0", features = ["no-entrypoint"] }
solana-program = "1.10.29"
cardinal-token-manager = { version = "^4.0.2", path = "../cardinal-token-manager", features = ["cpi"] }
cardinal-payment-manager = { version = "^3.0.0", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }