[package]
name = "identity-gateway-verifier"
version = "0.1.0"
description = "Program for manging token mangers using the Identity Gateway Protocol"
edition = "2021"
homepage = "https://identity.com"
repository = "https://github.com/cardinal-labs/cardinal-token-manager/tree/main/programs/identity-gateway-verifier"
authors = ["Brett Etter <brett.etter@identity.com>"]
license = "AGPL-3.0"
keywords = ["solana", "cardianl", "identity"]

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_gateway_verifier"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.21.0", features = ["init-if-needed"] }
anchor-spl = "0.21.0"
solana-gateway = { git = "https://github.com/identity-com/on-chain-identity-gateway.git", rev = "ebfec7f4b0b517bf33ae5db0b8c1bd3437a810a2" }
cardinal-token-manager = { version = "0.2.1", path = "../cardinal-token-manager", features = ["cpi"] }
