[package]
name = "solana-nft-programs-token-manager"
version = "1.0.0"
description = "Token manager"
edition = "2021"
license = "AGPL-3.0"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft_programs_token_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "1.10.29"
spl-associated-token-account = "1.1.2"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
mpl-token-metadata = "3.0.1"
mpl-utils = "0.3.1"
solana-nft-programs-creator-standard = { version = "1.0.0", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }